tests/snapshots/lib__snapshots__simple_filter@parse_spec_invalid_level.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 68
expression: "crate1::mod1=noNumber,crate2=debug"
---
Filter {
    directives: SortedVec {
        vec: [
            Directive {
                target: Some(
                    "crate2",
                ),
                level: LevelFilter::DEBUG,
            },
        ],
    },
    regex: None,
}
