tests/snapshots/lib__snapshots__simple_filter@parse_spec_string_level.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate1::mod1=wrong,crate2=warn"
---
Filter {
    directives: ReverseSortedVec {
        vec: [
            Directive {
                target: Some(
                    "crate2",
                ),
                level: LevelFilter::WARN,
            },
        ],
    },
    regex: None,
}
