tests/snapshots/lib__snapshots__simple_filter@parse_spec_valid_filter.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate1::mod1=error,crate1::mod2,crate2=debug/abc"
---
Filter {
    directives: ReverseSortedVec {
        vec: [
            Directive {
                target: Some(
                    "crate1::mod2",
                ),
                level: LevelFilter::TRACE,
            },
            Directive {
                target: Some(
                    "crate1::mod1",
                ),
                level: LevelFilter::ERROR,
            },
            Directive {
                target: Some(
                    "crate2",
                ),
                level: LevelFilter::DEBUG,
            },
        ],
    },
    regex: Some(
        abc,
    ),
}
