tests/snapshots/lib__snapshots__simple_filter@target.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 68
expression: "example::log::target=level"
---
Filter {
    directives: SortedVec {
        vec: [],
    },
    regex: None,
}
