tests/snapshots/lib__snapshots__simple_report@invalid-target.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 74
expression: crate=target=warn
---

  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::Warning::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ crate=target=warn
   ·       ─────┬─────
   ·            ╰── this level filter is invalid
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

