tests/snapshots/lib__snapshots__simple_report@levels.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 76
expression: "off,error,warn,info,debug,trace"
---
(no warnings)
