tests/snapshots/lib__snapshots__simple_report@pain.env_filter.snap
---
source: tests/snapshots.rs
expression: "target1[span1],[span2]target2,[span3][span4],[[[[[[span5],[{field1!!!!!!!!!field2=val}]"
---

  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ target1[span1],[span2]target2,[span3][span4],[[[[[[span5],[{field1!!!!!!!!!field2=val}]
   ·                                                                                   ─────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

